<resources>
    <string name="app_name">手机借贷</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <item name="statusbarutil_fake_status_bar_view" type="id" />
    <item name="statusbarutil_translucent_view" type="id" />
    <string name="inputphone">请输入手机号码</string>
    <string name="inputsmscode">请输入短信验证码</string>
    <string name="inputpicturecode">请输入图文验证码</string>
    <string name="getsmscode">获取验证码</string>
    <string name="login">登 录</string>

    <string name="inputname">请输入姓名</string>
    <string name="inputid">请输入身份证号</string>
    <string name="inputPhonum">请输入手机号</string>
    <string name="inputall">请输入全部信息</string>

</resources>
